@@ -1,6 +1,8 @@
+/*	$NetBSD: rogue.h,v 1.3 1995/04/22 10:28:14 cgd Exp $	*/
+
 /*
- * Copyright (c) 1988 The Regents of the University of California.
- * All rights reserved.
+ * Copyright (c) 1988, 1993
+ *	The Regents of the University of California.  All rights reserved.
  *
  * This code is derived from software contributed to Berkeley by
  * Timoth C. Stoehr.
@@ -33,8 +35,7 @@
  * OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
  * SUCH DAMAGE.
  *
- *	from: @(#)rogue.h	5.6 (Berkeley) 2/28/91
- *	$Id: rogue.h,v 1.2 1993/08/01 18:52:33 mycroft Exp $
+ *	@(#)rogue.h	8.1 (Berkeley) 5/31/93
  */
 
 /*
